# eventfold

./: index.html  package-lock.json  package.json  vite.config.js
PRDs/: PRD-EF-V2-01-bug-fixes.md  PRD-EF-V2-02-data-visibility.md  PRD-EF-V2-03-analytics.md  PRD-EF-V2-04-email-workflow.md  PRD-EF-V2-05-power-features.md  PRD-EF-V3-01-api-intelligence.md  PRD-EF-V3-02-csv-import.md  PRD-EF-V3-03-tags-blacklist.md  PRD-EF-V3-04-activity-feed.md  PRD-EF-V3-05-smart-outreach.md  PRD-EF-V5-01-prospect-integration.md
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: credentials.rs  generator.rs  github.rs  lib.rs  main.rs  repos.rs
src/components/common/: CommandPalette.jsx  SettingsModal.jsx  TemplateManager.jsx
src/components/leads/: AddLeadModal.jsx  BulkActionBar.jsx  CopyToast.jsx  CsvImportModal.jsx  DailyGoalBar.jsx  EmailStatusPill.jsx  HookPickerModal.jsx  LeadDetailPanel.jsx  LeadsSummaryBar.jsx  LeadsTable.jsx  OutreachStatusPill.jsx  StatusPickerPopover.jsx  TagPill.jsx  TemplatePickerPopover.jsx  UndoToast.jsx
src/constants/: outreach.js
src/context/: AppContext.jsx
src/data/: defaultTemplates.js  sampleLeads.js
src/hooks/: useDailyStats.js  useLeadsFilter.js  useSelection.js  useUndo.js
src/utils/: exportCSV.js  generateMailto.js  parseCSV.js  relativeTime.js  updateOutreachStatus.js
src/views/: ActivityView.jsx  AnalyticsView.jsx  EmailView.jsx  FeaturesView.jsx  FollowUpsView.jsx  IntelView.jsx  LeadsView.jsx  ProspectView.jsx  TodayView.jsx
