[package]
name = "eventfold"
version = "1.0.0"
edition = "2021"

[lib]
name = "eventfold_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "eventfold"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = [] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio    = { version = "1", features = ["full"] }
open     = "5"
keyring  = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
